; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_pad.c_PAD_SetSamplingCallback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_pad.c_PAD_SetSamplingCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__pad_samplingcallback = common dso_local global i64 0, align 8
@__pad_samplinghandler = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PAD_SetSamplingCallback(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* @__pad_samplingcallback, align 8
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %2, align 8
  store i64 %5, i64* @__pad_samplingcallback, align 8
  %6 = load i64, i64* %2, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @__pad_samplinghandler, align 4
  %10 = call i32 @SI_RegisterPollingHandler(i32 %9)
  br label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @__pad_samplinghandler, align 4
  %13 = call i32 @SI_UnregisterPollingHandler(i32 %12)
  br label %14

14:                                               ; preds = %11, %8
  %15 = load i64, i64* %3, align 8
  ret i64 %15
}

declare dso_local i32 @SI_RegisterPollingHandler(i32) #1

declare dso_local i32 @SI_UnregisterPollingHandler(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
